# emsdk_rules_rust_bug

./: BUILD.bazel  WORKSPACE.bazel  hello-world.cc  hello-world.rs
patches/: 0001-Switch-to-platforms-based-toolchain-resolution.patch  0001-WIP.patch  0002-WIP.patch  BUILD.bazel
